Version: 0.7.1
Date: ????
  Features:
    - Added `flib_widthless_textfield` style
    - Children in a `gui-beta.GuiStructure` can now be defined in the array portion, instead of in a `children` table
    - `misc.delineate_number()` now supports decimal numbers
  Changes:
  Bugfixes:
    - Fixed a crash when calling `gui-beta.read_action()` when the element was invalid
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2021-02-12
  Features:
    - Added `area` module
    - Added `flib_titlebar_flow` style
    - Added `divisor` argument to `math.round()`, allowing rounding to the nearest multiple of N
    - Added `math.max_double` and `math.min_double`
    - Added argument to `misc.ticks_to_timestring` to preserve leading zeroes
  Optimizations:
    - Significant performance improvements to `gui-beta.build()`
  Bugfixes:
    - Fixed `math.max_uint` being one number too large
    - Fixed `data-util.create_icons()` not using all of the icon specifications
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2021-01-02
  Features:
    - Added proper documentation for the `gui-beta` module
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2020-11-23
  Features:
    - Added WIP `gui-beta` module
      - This module is experimental, but is currently relatively stable. Use at your own risk. See the source code for documentation.
    - Additional arguments may be passed to `migration.on_config_changed()` to be available in the migration functions
    - Added `data-util.dark_red_button_tileset`
    - Added `flib_tool_button_dark_red` button style
  Changes:
    - Updated to Factorio 1.1
    - Modified `flib_selected_frame_action_button` style to better match the vanilla buttons
    - Made `new_layers` argument to `data-util.create_icons()` optional